--- a/css/rowReorder.jqueryui.css
+++ b/css/rowReorder.jqueryui.css
@@ -1,6 +1,6 @@
 div.dt-rowReorder-float-parent {
   table-layout: fixed;
-  outline: 2px solid #0a59cb;
+  outline: 2px solid rgb(10, 89, 203);
   z-index: 2001;
   position: absolute !important;
   overflow: hidden;
@@ -31,7 +31,7 @@ table.dataTable td.reorder {
 }
 
 html.dark div.dt-rowReorder-float-parent {
-  outline-color: #6ea8fe;
+  outline-color: rgb(110, 168, 254);
 }
 html.dark div.dt-rowReorder-float-parent table.dt-rowReorder-float {
   background-color: var(--dt-html-background);
